--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -1,6 +1,46 @@
-/* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
+@import "fonts";
+@import "header_toolbar";
 
-/* inject:imports */
-/* endinject */
+$bg-color: #FFF;
 
-/* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
+body {
+	background-color: $bg-color;
+}
+
+#wrapper {
+	padding: 0;
+
+	.portlet-layout {
+		margin: 0 0 75px;
+
+		.portlet-column {
+			padding: 0;
+		}
+
+		.portlet-body > .container-fluid-1280 {
+			position: relative;
+		}
+	}
+
+	.main-content-card {
+		box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+		margin-top: 20px;
+		min-height: 200px;
+	}
+
+	.card-footer {
+		min-height: 5.6em;
+	}
+
+	.sidenav-container {
+		.sidenav-content {
+			@include sm {
+				margin-right: -15px;
+			}
+		}
+
+		&.closed .sidenav-content {
+			margin-right: 0;
+		}
+	}
+}
