--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -44,3 +44,10 @@ body {
 		}
 	}
 }
+
+@import "assan/style";
+@import "assan/revolution/css/settings.css";
+@import "assan/owl/carousel.css";
+@import "assan/owl/theme.css";
+
+$primary-font:'Source Sans Pro', sans-serif; 
