--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -50,4 +50,6 @@ body {
 @import "assan/owl/carousel.css";
 @import "assan/owl/theme.css";
 
-$primary-font:'Source Sans Pro', sans-serif; 
+$primary-font:'Source Sans Pro', sans-serif; @import "grow/_variables.scss";
+
+@import "grow/_product_menu.scss";
