--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -53,7 +53,7 @@ body {
 $primary-font:'Source Sans Pro', sans-serif;
 
 @import "grow/_variables.scss";
-
+@import "grow/_base";
 @import "grow/_control_menu.scss";
 
 @import "grow/_product_menu.scss";
